--- a/index.html
+++ b/index.html
@@ -607,6 +607,12 @@ audio::-webkit-media-controls-panel{background:var(--s2);}
 #yt-player-div { width:100%; height:100%; }
 
 </style>
+
+<link rel="manifest" href="/manifest.json">
+<link rel="apple-touch-icon" href="/icons/icon-192.png">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
 </head>
 <body>
 
@@ -4160,5 +4166,44 @@ function renderEventOptions() {
   </div>
 </div>
 
+
+<script>
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('/service-worker.js')
+      .then(reg => {
+        reg.onupdatefound = () => {
+          const newWorker = reg.installing;
+          newWorker.onstatechange = () => {
+            if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
+              window.location.reload();
+            }
+          };
+        };
+      })
+      .catch(err => console.log('Erro SW:', err));
+  });
+}
+</script>
+<!-- PWA -->
+<link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="#060e1f">
+<meta name="mobile-web-app-capable" content="yes">
+
+<!-- iOS (Safari) -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="Louvor">
+<link rel="apple-touch-icon" href="/icons/icon-192.png">
+
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('/service-worker.js')
+        .then(reg => console.log('SW registado:', reg.scope))
+        .catch(err => console.log('SW erro:', err));
+    });
+  }
+</script>
 </body>
 </html>
